--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 	<div id="instrument">
 		<div id="c" class="box">
 			<audio id="c_audio">
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.mp3" type="audio/mpeg"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.wav" type="audio/wax"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.ogg" type="audio/ogg"></source>
+				<source src="https://raw.github.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.mp3" type="audio/mpeg"></source>
+				<source src="https://raw.github.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.wav" type="audio/wax"></source>
+				<source src="https://raw.github.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.ogg" type="audio/ogg"></source>
 			</audio>
 		</div>
 		<div id="d" class="box">
 			<audio id="d_audio">
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/d_note.mp3" type="audio/mpeg"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/d_note.wav" type="audio/wax"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/d_note.ogg" type="audio/ogg"></source>
+				<source src="musicbox/tree/master/music_notes/d_note.mp3" type="audio/mpeg"></source>
+				<source src="musicbox/tree/master/music_notes/d_note.wav" type="audio/wax"></source>
+				<source src="musicbox/tree/master/music_notes/d_note.ogg" type="audio/ogg"></source>
 			</audio>
 		</div>
 		<div id="e" class="box">
