music update raw

--- a/index.html
+++ b/index.html
@@ -12,51 +12,51 @@
 	<div id="instrument">
 		<div id="c" class="box">
 			<audio id="c_audio">
-				<source src="https://raw.github.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.mp3" type="audio/mpeg"></source>
-				<source src="https://raw.github.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.wav" type="audio/wax"></source>
-				<source src="https://raw.github.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.ogg" type="audio/ogg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/master/music_notes/a_note.mp3" type="audio/mpeg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.wav" type="audio/wax"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/c_note.ogg" type="audio/ogg"></source>
 			</audio>
 		</div>
 		<div id="d" class="box">
 			<audio id="d_audio">
-				<source src="musicbox/tree/master/music_notes/d_note.mp3" type="audio/mpeg"></source>
-				<source src="musicbox/tree/master/music_notes/d_note.wav" type="audio/wax"></source>
-				<source src="musicbox/tree/master/music_notes/d_note.ogg" type="audio/ogg"></source>
+				<source src="https://raw.githubusercontent.com/musicbox/tree/master/music_notes/d_note.mp3" type="audio/mpeg"></source>
+				<source src="https://raw.githubusercontent.com/musicbox/tree/master/music_notes/d_note.wav" type="audio/wax"></source>
+				<source src="https://raw.githubusercontent.com/musicbox/tree/master/music_notes/d_note.ogg" type="audio/ogg"></source>
 			</audio>
 		</div>
 		<div id="e" class="box">
 			<audio id="e_audio">
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/e_note.mp3" type="audio/mpeg"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/e_note.wav" type="audio/wax"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/e_note.ogg" type="audio/ogg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/e_note.mp3" type="audio/mpeg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/e_note.wav" type="audio/wax"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/e_note.ogg" type="audio/ogg"></source>
 			</audio>
 		</div>
 		<div id="f" class="box">
 			<audio id="f_audio">
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/f_note.mp3" type="audio/mpeg"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/f_note.wav" type="audio/wax"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/f_note.ogg" type="audio/ogg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/f_note.mp3" type="audio/mpeg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/f_note.wav" type="audio/wax"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/f_note.ogg" type="audio/ogg"></source>
 			</audio>
 		</div>
 		<div id="g" class="box">
 			<audio id="g_audio">
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/g_note.mp3" type="audio/mpeg"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/g_note.wav" type="audio/wax"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/g_note.ogg" type="audio/ogg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/g_note.mp3" type="audio/mpeg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/g_note.wav" type="audio/wax"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/g_note.ogg" type="audio/ogg"></source>
 			</audio>
 		</div>
 		<div id="a" class="box">
 			<audio id="a_audio">
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/a_note.mp3" type="audio/mpeg"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/a_note.wav" type="audio/wax"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/a_note.ogg" type="audio/ogg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/a_note.mp3" type="audio/mpeg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/a_note.wav" type="audio/wax"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/a_note.ogg" type="audio/ogg"></source>
 			</audio>
 		</div>
 		<div id="b" class="box">
 			<audio id="b_audio">
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/b_note.mp3" type="audio/mpeg"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/b_note.wav" type="audio/wax"></source>
-				<source src="https://github.com/NahlaMoohamed/musicbox/tree/master/music_notes/b_note.ogg" type="audio/ogg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/b_note.mp3" type="audio/mpeg"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/b_note.wav" type="audio/wax"></source>
+				<source src="https://raw.githubusercontent.com/NahlaMoohamed/musicbox/tree/master/music_notes/b_note.ogg" type="audio/ogg"></source>
 			</audio>
 		</div>
 	</div>
